# RISC-V-Simulator

./: .gitignore  CMakeLists.txt  README.md
docs/: optimizations_en.md
include/: ALU.h  bus.h  circular_queue.h  instructions.h  load_store_buffer.h  memory.h  predictor.h  register.h  reorder_buffer.h  reservation_station.h  type.h
src/: ALU.cpp  bus.cpp  instructions.cpp  load_store_buffer.cpp  main.cpp  memory.cpp  predictor.cpp  register.cpp  reorder_buffer.cpp  reservation_station.cpp
